# developtools_syscap_codec

./: BUILD.gn  README.en.md  README.md  README_ZH.md  RELEASE-NOTE.txt  bundle.json  config.gni  tree.txt
include/: context_tool.h  create_pcid.h  syscap_define.h  syscap_tool.h
include/codec_config/: syscap_define.h  syscap_define_extern.h
interfaces/inner_api/: syscap_interface.c  syscap_interface.h
napi/: BUILD.gn  napi_query_syscap.cpp  query_syscap.js
src/: context_tool.c  create_pcid.c  endian_internal.c  endian_internal.h  main.c  syscap_tool.c
taihe/: BUILD.gn
taihe/syscap/: BUILD.gn
taihe/syscap/idl/: ohos.systemCapability.taihe
taihe/syscap/src/: ani_constructor.cpp  ohos.systemCapability.impl.cpp
test/: syscap_define_check.c  syscap_tool_test.c
test/unittest/common/: BUILD.gn  syscap_codec_test.cpp
test/unittest/common/include/: syscap_codec_test.h
tools/: syscap_check.py  syscap_collector.py  syscap_config_merge.py  syscap_consistency_check_tool.py
